--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="middle-container">
       <div class="profile">
         <img src="images/profile.png" alt="profile">
-        <h3>Hello.</h3>
+        <h2>Hello.</h2>
         <p class= "Intro">I am a web developer. I ❤️ cooking, sports and nature. </p>
       </div>
       <hr>
@@ -34,13 +34,13 @@
         <div class="skill-row">
           <img class="chillies" src="images/chillies.png" alt="chillies-img">
           <h3>Cooking</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <p>It's enjoyable time to prepare daily meals</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <h3>If you like cooking as much as I do.</h3>
         <p class="contact-message">Let's talk about food.</p>
         <a class="btn" href="mailto:Jiaying_He@outlook.com">CONTACT ME</a>
       </div>
